<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context="com.chrisking.publictransportapp.activities.main.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_welcome"
        android:textColor="@android:color/white"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_sub_title"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/taxiQueues" />

    <ImageView
        android:id="@+id/mainIcon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:adjustViewBounds="false"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/businconrounded180"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/learnMore"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/colorLightPurple"
        android:text="@string/main_learn_more"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/planCommute"
        android:layout_width="160dp"
        android:layout_height="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/action_button_rounded_corners"
        android:text="@string/main_plan_commute"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/planJourney"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/taxiQueues"
        android:layout_width="160dp"
        android:layout_height="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/action_button_rounded_corners"
        android:text="@string/main_taxi_queues"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/planCommute"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/planJourney"
        android:layout_width="160dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/action_button_rounded_corners"
        android:text="@string/main_plan_journey"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/advanced"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/advanced"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="92dp"
        android:layout_height="38dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/main_advanced"
        android:textAllCaps="false"
        android:textColor="@color/colorMainText"
        android:textSize="14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/learnMore" />

    <Button
        android:id="@+id/firebase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rank is normal"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/firebasefull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rank is full"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/firebase" />

</android.support.constraint.ConstraintLayout>
