<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context="com.chrisking.publictransportapp.activities.about.AboutActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="120dp"
                android:text="@string/about_hi"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.591" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/about_intro"
                android:textAlignment="center"
                android:textColor="@color/colorMainText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/about_why"
                android:textAlignment="center"
                android:textColor="@color/colorMainText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/about_sayhi"
                android:textAlignment="center"
                android:textColor="@color/colorMainText"
                android:textSize="16sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>

                <ImageView
                    android:id="@+id/twitter"
                    android:layout_width="55dp"
                    android:layout_height="48dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_column="3"
                    app:srcCompat="@drawable/twitter" />

                <ImageView
                    android:id="@+id/web"
                    android:layout_width="55dp"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    android:layout_column="2"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    app:srcCompat="@drawable/web" />

                <ImageView
                    android:id="@+id/linkedin"
                    android:layout_width="55dp"
                    android:layout_height="48dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_column="1"
                    app:srcCompat="@drawable/in" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/about_version"
                android:textAlignment="center"
                android:textColor="@color/colorMainText"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/about_open_source_title"
                android:textAlignment="center"
                android:textColor="@color/colorMainText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/transportApiSdk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:paddingTop="8dp"
                android:text="@string/about_transport_api_sdk"
                android:textAlignment="center"
                android:textColor="@color/colorMainText"
                android:textColorLink="@color/colorLinks"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/segmentedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:paddingTop="8dp"
                android:text="@string/about_segmented_button"
                android:textAlignment="center"
                android:textColor="@color/colorMainText"
                android:textColorLink="@color/colorLinks"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
