<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorTransparentGray" >

    <!-- ListView to be shown on widget -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGray"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="0"
            android:src="@drawable/businconrounded180" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="2dp"
            android:text="@string/widget_header"
            android:textColor="@color/colorBlack"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/refreshImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@drawable/refresh" />

    </LinearLayout>

    <ListView
        android:id="@+id/listViewWidget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="3dp" />

    <LinearLayout
        android:id="@+id/loaderLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/loader"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="visible" />
    </LinearLayout>

    <!-- Empty view is show if list items are empty -->
    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/no_results"
        android:textColor="@color/colorMainText"
        android:textSize="16dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/additional_setup_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/widget_additional_setup"
        android:textColor="@color/colorMainText"
        android:textSize="16dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/error_or_no_connection_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/widget_error_or_no_connection"
        android:textColor="@color/colorMainText"
        android:textSize="16dp"
        android:visibility="gone" />

</LinearLayout>